test/type/fail/println_klass.j
class A{
  Void main() {
    A a;
    println(a);
  }
}
